fix: margins on small screens

--- a/src/stylesheet/components/_speedControls.scss
+++ b/src/stylesheet/components/_speedControls.scss
@@ -1,5 +1,6 @@
 .SpeedControls {
   max-width: 100px;
+  margin-right: 20px;
   transition: all .5s ease;
 
   &__inner {
